# distil

./: .gitignore  README.md  benchmark.py  check_model.py  eval_results.json  miner.py  pyproject.toml  validator.py
api/: server.py
dataset/: Chinedum-iwueke__Bulletproof_bt-41.json  HzKimono__Meva-Beta-Alpha-Codex-42.json  Mzmarianna__Learning-41.json  SolidOS__contacts-pane-180.json  WordPress__gutenberg-75385.json  Wuizlz__SoftwareEngineeringTeam1-1.json  archway__ec-site-arch-9.json  containers__ramalama-2419.json  corasan__react-native-nitro-mlx-16.json  intel__device-modeling-language-411.json  laosuan__istio-1157.json  layer5io__sistent-1320.json  medinabenjamin__landing_page_test-54.json  minislively__claude-insights-toolkit-10.json  ministryofjustice__hmpps-person-match-593.json  openmc-dev__openmc-3802.json  ronaldmorgan99-tech__GoogleAiStudioWebsite1-13.json  sipeed__picoclaw-83.json  useautumn__autumn-730.json  zombar__tunnelmesh-365.json
docs/: B200_EVAL_SETUP.md
eval/: dataset.py  inference.py  kl_divergence.py  model_checker.py  scoring.py
examples/: distil_kl_train.py
knowledge/: distillation.yaml
reports/: 2026-04-02-king-integrity.md
results/: continuation_results.json  final_eval.json  real_distill_results.json
scripts/: chat_server.py  check_king_integrity.py  pod_eval.py  pod_eval_vllm.py  remote_validator.py  run_miner.sh  run_validator.sh
sim/: test_full.py
state/: announcement.json  disqualified.json  eval_progress.json  evaluated_uids.json  failures.json  last_eval.json  model_hashes.json  score_history.json  scores.json
(+5 files in other folders)
