[project]
name = "distillation"
version = "0.2.0"
description = "Bittensor subnet for GLM-5 model distillation — competitive model compression"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bittensor>=8.0.0",
    "bittensor-wallet>=2.0.0",
    "click>=8.0.0",
    "vllm>=0.6.0",
    "transformers>=4.40.0",
    "huggingface-hub>=0.20.0",
    "numpy>=1.26.0",
    "torch>=2.0.0",
]
